Implementações: 1.1 - Alterado o App para obter os dados do serviço 'ZCOCKPIT_APROVCENTRAL_SRV' ao invés do modelo local de teste; 1.2 - Adicionado Search Help para os filtros de 'Comprador' e 'Fornecedor'; 1.3 - Ajustadas as views 'mainPage' e 'detailPage' para utilizar os dados do serviço.

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -12,8 +12,8 @@
     "resources": "resources.json",
     "ach": "ach",
     "dataSources": {
-      "ZCOCKPIT_CENTRAL_SRV": {
-        "uri": "/sap/opu/odata/sap/ZCOCKPIT_CENTRAL_SRV",
+      "ZCOCKPIT_APROVCENTRAL_SRV": {
+        "uri": "/sap/opu/odata/sap/ZCOCKPIT_APROVCENTRAL_SRV",
         "type": "OData",
         "settings": {
           "odataVersion": "2.0",
@@ -70,12 +70,18 @@
         "type": "sap.ui.model.odata.v2.ODataModel",
         "settings": {
           "defaultOperationMode": "Server",
-          "defaultBindingMode": "OneWay",
+          "defaultBindingMode": "TwoWay",
           "defaultCountMode": "Request",
           "defaultUpdateMethod": "PUT"
         },
-        "dataSource": "ZCOCKPIT_CENTRAL_SRV",
+        "dataSource": "ZCOCKPIT_APROVCENTRAL_SRV",
         "preload": true
+      },
+      "modelTableSelectedLine": {
+        "type": "sap.ui.model.json.JSONModel",
+        "settings": {},
+        "uri": "",
+        "preload": false
       },
       "modelTableDefinition": {
         "type": "sap.ui.model.json.JSONModel",
